<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2013-2017 microG Project Team
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="lib_name">MicroG UI Tools</string>
    <string name="lib_license">Apache License 2.0, microG Team</string>

    <string name="about_version_str">Version: %1$s</string>
    <string name="about_name_version_str">%1$s %2$s</string>
    <string name="about_default_license">All rights reserved</string>

    <string name="prefcat_setup">Setup</string>

    <string name="self_check_title">Self-Check</string>
    <string name="self_check_desc">Check if the system is correctly set up to use MicroG</string>

    <string name="self_check_cat_permissions">Permissions granted</string>
    <string name="self_check_name_permission">Permission to %1$s:</string>
    <string name="self_check_resolution_permission">Touch here to grant permission. Not granting the permission can result in misbehaving applications</string>

    <string name="about_root_title">MicroG UI Demo</string>
    <string name="about_root_summary">Summary</string>
    <string name="about_root_version">Version v0.1.0</string>
    <string name="about_root_libraries">Included libraries</string>

    <string name="about_android_support_v4">v4 Support Library</string>
    <string name="about_android_support_v7_appcompat">v7 appcompat Support Library</string>
    <string name="about_android_support_v7_preference">v7 preference Support Library</string>
    <string name="about_android_support_license">Apache License 2.0, The Android Open Source Project</string>

    <!-- UpdateChecker tag controller-->

    <string name="github_tag_version">5.11</string>

    <!-- Updater strings-->

    <string name="check_updates">Check updates</string>
    <string name="update_available">New version available!</string>
    <string name="no_update_available">You are on latest version</string>
    <string name="check_updates_error">Unable to check for updates</string>

    <string name="snackbar_button_download">Download</string>

    <string name="error_connection">Connection error:</string>
    <string name="error_others">Error:</string>
</resources>
