<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card"
        style="?attr/materialCardViewFilledStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="17dp"
        android:clickable="false"
        app:cardBackgroundColor="?colorSurfaceContainer"
        app:cardCornerRadius="28dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:id="@android:id/icon"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_gravity="center_horizontal"
                android:importantForAccessibility="no"
                android:src="@android:drawable/sym_def_app_icon" />

            <TextView
                android:id="@android:id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:singleLine="false"
                android:text="@string/about_root_title"
                android:textAppearance="?attr/textAppearanceTitleLarge" />

            <TextView
                android:id="@android:id/summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/about_root_summary"
                android:textAppearance="?attr/textAppearanceBodySmall"
                android:textColor="?attr/colorAccent"
                android:visibility="gone" />

            <TextView
                android:id="@+id/about_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:maxLines="2"
                android:text="@string/about_root_version"
                android:textAppearance="?attr/textAppearanceBodyLarge" />

            <Button
                android:id="@+id/btnCheckUpdates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginTop="12dp"
                android:text="@string/check_updates" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@android:id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:paddingStart="24dp"
        android:paddingTop="8dp"
        android:paddingEnd="24dp"
        android:text="@string/about_root_libraries"
        android:textAppearance="?attr/textAppearanceTitleSmall"
        android:textColor="?android:colorAccent" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@null"
        android:nestedScrollingEnabled="true"
        tools:listitem="@android:layout/simple_list_item_2" />
</LinearLayout>